apps/base/iperf3/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: iperf3
  labels:
    istio-injection: disabled
